# mutate-webhook-rs

./: Cargo.toml  Makefile  README.md
contrib/: config.yaml  self-signed.sh
deploy/: mutatingwebhookconfiguration.yaml
src/: app.rs  args.rs  config.rs  lib.rs  logging.rs  main.rs  prelude.rs  status.rs  webhook.rs
src/tests/: app_test.rs  config_tests.rs  mod.rs
