[package]
name = "mutate-webhook-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = "0.22.1"
k8s-openapi = { version = "0.26.0", features = ["v1_34"] }
kube = "2.0.1"
poem = { version = "3.1.12", features = ["rustls"] }
serde = "1.0.228"
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
