[package]
name = "mutate-webhook-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
args = "2.2.0"
base64 = "0.22.1"
chrono = "0.4.42"
clap = { version = "4.5.51", features = ["derive"] }
k8s-openapi = { version = "0.26.0", features = ["v1_34"] }
kube = "2.0.1"
poem = { version = "3.1.12", features = ["rustls"] }
serde = "1.0.228"
serde_json = "1.0.145"
serde_yaml = "0.9.34"
template = "0.1.0"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
